add my contact info

--- a/scide.tex
+++ b/scide.tex
@@ -7,12 +7,10 @@
 
 %see lac2012.sty for how to format multiple authors!
 \author
-{Jakob LEBEN
-\\ Group, Lab, Organisation
-\\ Address
-\\ ZIP Town,
-\\ Country,
-\\ Firstname.Lastname@here.edu
+{
+Jakob LEBEN
+\\ Koper, Slovenia
+\\ jakob.leben@gmail.com
 \And
 Tim Blechmann
 \\ Vienna, Austria
