feeding the monster

--- a/sample.bib
+++ b/sample.bib
@@ -1,3 +1,44 @@
+@article{rethinking-sc,
+	Address = {{Cambridge, MA, USA}},
+	Issn = {{0148-9267}},
+	Publisher = {{MIT Press}},
+	Tags = {{Computer Music}},
+	author = {McCartney, James},
+	title = {{Rethinking the Computer Music Language: SuperCollider}},
+	journal = {{Computer Music Journal}},
+	volume = {{26}},
+	number = {{4}},
+	pages = {61-68},
+	year = {{2002}},
+	doi = {{http://dx.doi.org/10.1162/014892602320991383}},
+}
+
+@inproceedings{blechmann11icmc,
+	booktitle = {{Proceedings of the International Computer Music Conference}},
+	author = {Tim Blechmann},
+	title = {{Supernova - A scalable parallel audio synthesis server for SuperCollider}},
+	year = {{2011}},
+}
+
+@incollection{collision,
+  author      = "Stefan Kersten and Marije A.J. Baalman",
+  title       = {{``Collision with the Penguin'': SuperCollider on Linux}},
+  editor      = "Scott Wilson and David Cottle and Nick Collins",
+  booktitle   = "The SuperCollider Book",
+  publisher   = "MIT Press",
+  year        = 2011,
+}
+
+@incollection{dos,
+  author      = "Christopher Fraunberger",
+  title       = {{SuperCollider on Windows}},
+  editor      = "Scott Wilson and David Cottle and Nick Collins",
+  booktitle   = "The SuperCollider Book",
+  publisher   = "MIT Press",
+  year        = 2011,
+}
+
+
 @book{Sal89,
 author={Salton, G.},
 year={1989},
